2006-04-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmchooser.c:  Fix setting of GdmHosts so it should use
	  the hosts from the config file when when BROADCAST/MULTICAST
	  is set to false.  Partial fix for #338274.  Thanks to Tiago
	  Vignatti <tv02@c3sl.ufpr.br> for noticing this.

2006-04-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.desktop.in.in: Added.  This makes gdmsetup.desktop
	  get properly translated.  Fixes bug #334647.  Patch by Vincent
	  Fretin <vincent.fretin@gmail.com>
	* gui/gdmsetup.desktop.in: Removed
	* gui/Makefile.am: Updated to reflect change.
	* configure.ac, po/LINGUAS: Updated to reflect latest po/LINGUAS
	  patch.  Fixes bug #33769.  Patch provided by Przemyslaw Grzegorczyk
	  <pgrzegorczyk@gmail.com>.

2006-04-14  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.2: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.
	
2006-04-14  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Further clean up access to ICEAuthority file.  Fixes
	  bug #338358.  Patch provided by Ray Strode <rstrode@redhat.com>.

2006-04-13  Brian Cameron  <brian.cameron@sun.com>

	* NEWS: Updated NEWS.
	* gui/gdmchooser.c: Fix references to the BROADCAST key so it is
	  correctly listed as a bool, not a string.  Kudos to Tiago Vignatti
	  <tv02@c3sl.ufpr.br>.
	* configure.ac: Fix check for adding /usr/bin to the GDM_USER_PATH so
	  it doesn't add it twice.  This used to work, but got broken on the
	  03-28-2006 patch by Julio M. Merino Vidal to get rid of the EXPANDED
	  variables.  Working again now.

2006-04-11  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/Makefile.am:  Now include gdmthemetester.in in
	  EXTRA_DIST instead of gdmthemetester.

2006-04-10  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.1: 
	* NEWS: Updated.
	* configure.ac: Update to 2.14.1.

2006-04-10  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, po/LINGUAS: No use LINGUAS procedure as stated