@@ -694,7 +694,7 @@ Random from selected
 					      <child>
 						<widget class="GtkLabel" id="label173">
 						  <property name="visible">True</property>
-						  <property name="label">_Add...</property>
+						  <property name="label" translatable="yes">_Add...</property>
 						  <property name="use_underline">True</property>
 						  <property name="use_markup">False</property>
 						  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -773,7 +773,7 @@ Random from selected
 					      <child>
 						<widget class="GtkLabel" id="LocalThemeRemoveButtonLabel">
 						  <property name="visible">True</property>
-						  <property name="label">_Remove...</property>
+						  <property name="label" translatable="yes">_Remove...</property>
 						  <property name="use_underline">True</property>
 						  <property name="use_markup">False</property>
 						  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2231,7 +2231,7 @@ Random from selected
 						  <child>
 						    <widget class="GtkLabel" id="label209">
 						      <property name="visible">True</property>
-						      <property name="label">_Add...</property>
+						      <property name="label" translatable="yes">_Add...</property>
 						      <property name="use_underline">True</property>
 						      <property name="use_markup">False</property>
 						      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -2310,7 +2310,7 @@ Random from selected
 						  <child>
 						    <widget class="GtkLabel" id="label210">
 						      <property name="visible">True</property>
-						      <property name="label">_Remove...</property>
+						      <property name="label" translatable="yes">_Remove...</property>
 						      <property name="use_underline">True</property>
 						      <property name="use_markup">False</property>
 						      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4503,7 +4503,7 @@ Random from selected
 				      <child>
 					<widget class="GtkLabel" id="label294">
 					  <property name="visible">True</property>
-					  <property name="label">_Add...</property>
+					  <property name="label" translatable="yes">_Add...</property>
 					  <property name="use_underline">True</property>
 					  <property name="use_markup">False</property>
 					  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4599,7 +4599,7 @@ Random from selected
 				      <child>
 					<widget class="GtkLabel" id="label290">
 					  <property name="visible">True</property>
-					  <property name="label">R_emove</property>
+					  <property name="label" translatable="yes">R_emove</property>
 					  <property name="use_underline">True</property>
 					  <property name="use_markup">False</property>
 					  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4678,7 +4678,7 @@ Random from selected
 				      <child>
 					<widget class="GtkLabel" id="label289">
 					  <property name="visible">True</property>
-					  <property name="label">A_dd...</property>
+					  <property name="label" translatable="yes">A_dd...</property>
 					  <property name="use_underline">True</property>
 					  <property name="use_markup">False</property>
 					  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4788,7 +4788,7 @@ Random from selected
 			      <child>
 				<widget class="GtkLabel" id="label280">
 				  <property name="visible">True</property>
-				  <property name="label">A_pply User Changes</property>
+				  <property name="label" translatable="yes">A_pply User Changes</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
