@@ -579,8 +579,8 @@ verify_gdm_version (void)
       gdm_wm_focus_new_windows (TRUE);
     
       msg =  g_strdup_printf (_("The greeter version (%s) does not match the daemon "
-                                "version.  "
-                                "You have probably just upgraded GDM.  "
+                                "version. "
+                                "You have probably just upgraded GDM. "
                                 "Please restart the GDM daemon or the computer."),
                               VERSION);
     
