@@ -1,5 +1,12 @@
 2006-04-17  Brian Cameron  <brian.cameron@sun.com>
 
+	* gui/gdmlogin.c, gui/gdmsetup.glade, gui/greeter/greeter.c:
+	  Fixed strings so that they are marked as translatable.
+	  Fixes bug #338765.  Patch provided by Vincent Fretin
+	  <vincent.fretin@gmail.com>.
+
+2006-04-17  Brian Cameron  <brian.cameron@sun.com>
+
 	* gui/gdmchooser.c:  Fix setting of GdmHosts so it should use
 	  the hosts from the config file when when BROADCAST/MULTICAST
 	  is set to false.  Partial fix for #338274.  Thanks to Tiago
